--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <div class="top">
     <h1 style="margin:0;font-size:20px;">My Resume</h1>
     <div class="notice">
-      <a class="btn" href="hemanth_jayaram.pdf" target="_blank" rel="noopener">Open / Download PDF</a>
+      <a class="btn" href="hemanth_resume.pdf" target="_blank" rel="noopener">Open / Download PDF</a>
     </div>
   </div>
 
   <div class="wrap">
     <!-- some mobile browsers don't embed PDFs — fallback link provided -->
-    <iframe src="hemanth_jayaram.pdf#view=FitH&toolbar=0" title="Resume PDF">
-      If your browser can't preview PDF, <a href="hemanth_jayaram.pdf">download it here</a>.
+    <iframe src="hemanth_resume.pdf#view=FitH&toolbar=0" title="Resume PDF">
+      If your browser can't preview PDF, <a href="hemanth_resume.pdf">download it here</a>.
     </iframe>
   </div>
 </body>
